# python-ack

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
python_ack.egg-info/: SOURCES.txt
samples/: test.py
script/: python-ack
src/python-ack/: __init__.py  __main__.py  __version__.py  test.py
src/python_ack/: __main__.py  __version__.py  ack.py
src/python_ack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test.py
tests/crw/memories/exclude_dir/: 1-data  1-data 2  2-data
tests/crw/memories/glOtc6EzYQTZEt0J18cU1f4Ycdz1H8WWTDVkBQTp1Gv2BWgb/: 1-data  1-data.json  2-data
