[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-ack"
version = "0.0.2"
authors = [
  { name="Anton Sychev", email="anton@sychev.xyz" },
]
description = "Python-ACK is a code-searching tool, similar to grep but optimized for programmers searching large trees of source code."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["regexp", "file", "document", "search"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.scripts]
python-ack = "python_ack.__main__:main"

[project.optional-dependencies]
 build = ["build", "twine"]

[project.urls]
Homepage = "https://github.com/klich3/python-ack"
Issues = "https://github.com/klich3/python-ack/issues"